# src/app/Http/Controllers/AuthController.php
@@ -5,63 +5,82 @@ namespace App\Http\Controllers;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
+use App\Services\UserService;
+use App\Validators\UserValidation;
+use App\Helpers\ResponseHelper;
 
 class AuthController extends Controller
 {
-    
 
+            /** var import user services */
+        protected $userService;
+        /** var import user validator */
+        protected $userValidation;
+
+        public function __construct(UserService $userService , UserValidation $userValidation){
+
+            $this->userService = $userService;
+            $this->userValidation = $userValidation;
+        }
+    
+       
         /**
-         * authendicate accept request.
-         *
-         * @param  \Illuminate\Http\Request  $request
-         * @param  $username string
-         * @param  $password string
-         * @return Json with token or failed status
+         * @OA\Post(
+         *     path="/api/users/authendicate",
+         *     summary="Authendicate a user and return the token",
+         *     description="User Authendication will return the token, for easy to keep the testing now token header implementation is not done",
+         *     operationId="authUser",
+         *     tags={"User"},
+         *     @OA\RequestBody(
+         *         @OA\MediaType(
+         *             mediaType="application/json",
+         *             @OA\Schema(
+         *                 @OA\Property(
+         *                     property="username",
+         *                     type="string"
+         *                 ),
+         *                 @OA\Property(
+         *                     property="password",
+         *                     type="string"
+         *                 ),
+         *                 example={"username": "admin", "password": "123456"}
+         *             )
+         *         )
+         *     ),
+         *      @OA\Response(
+         *         response=200,
+         *         description="successful operation",
+         *     ),
+         *     @OA\Response(
+         *         response=422,
+         *         description="Invalid user login attempt"
+         *     ),
+         * )
          */
         public function authendicate(Request $request){
-
-            $username = $request->input('username');
-            $password = $request->input('password');
              
-            $user = User::where('username', $request->input('username'))->Where('status',1)->first();
+            $validation = \Validator::make($request->all(), $this->userValidation->getAuthendicate());
 
-            if(!empty($user)){
-                if(Hash::check($password, $user->password)){
+            if ($validation->fails()) {
+                $response_code = 422;
+                $response = ResponseHelper::failedResponse("Login attempt failed", $response_code , $validation->errors());
 
-                    $api_key = bin2hex(random_bytes(32));
-                    
-                    User::where('username', $request->input('username'))->update(['api_token' => $api_key]);
-                   
-
-                    $token_data = ['name' => $user->name, 'access_token' => $api_key];
-
-                    $token = base64_encode(json_encode($token_data));
-
-                    return $this->respondWithToken($token);
-
-                }else{
-                    return response()->json(['message' => 'Invalid username or password','status' => 0]);
-                }
             }else{
-                return response()->json(['message' => 'Invalid username or password','status' => 0]);
+
+                $result = $this->userService->authendicate($request->all());
+                
+                if(!empty($result)){
+                    $response_code = 200;
+                    $response = ResponseHelper::successResponse($result, $response_code, "User login Successfully!");
+                }else{
+                    $response_code = 422;
+                    $response = ResponseHelper::failedResponse("Invalid login details", $response_code , $validation->errors());
+                }
             }
+
+            return response()->json($response, $response_code);
         }
 
 
-
-        /**
-         * RespondWithToken success request with token response.
-         * @param  $token string
-         * @return Json with token 
-         */
-        protected function respondWithToken($token){   
-       
-            return response()->json([
-                'access_token' => $token,
-                'token_type' => 'bearer',
-                'expires_in' => 60 * 60 *60,
-                'status' => 1,
-                'message' => "login successfull"
-            ]);
-        }
+        
 }
